Fix layout issues, add navbar and CSS variables to improve color scheme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,15 @@
   box-sizing: border-box;
 }
 
+/* CSS variables */
+:root {
+    --primary-font: "Roboto Serif", "Montserrat", sans-serif;
+    --secondary-font: "Merriweather", sans-serif;
+    --text-color: #333333; /* Dark grey */
+    --primary-color: #7a9fc2; /* Light Blue*/
+    --secondary-color: #5ac18e; /* Warm green*/
+  }
+
 /* General styling */
 
 body {
@@ -16,12 +25,12 @@ body {
   display: flex;
   flex-direction: column;
   /* Generic project styling */
-  color: #3a3a3a;
+  color: var(--text-color);
   font-family: "Merriweather", sans-serif;
 }
 
 header {
-  background-color: red;
+  background-color: #5ac18e;
 }
 
 h1 {
@@ -30,11 +39,11 @@ h1 {
 }
 
 main {
-  background-color: blue;
+  background-color: #ffffff;
   /* Make main element take up any surplus space to push footer down */
   flex: 1 0 auto;
 }
 
 footer {
-  background-color: yellow;
+  background-color: #5ac18e;
 }
